--- a/BlackHole/BlackHole-Info.plist.template
+++ b/BlackHole/BlackHole-Info.plist.template
@@ -24,14 +24,14 @@
     <string>1</string>
     <key>CFPlugInFactories</key>
     <dict>
-        <key>717D21C9-0892-4A2A-AC0B-35A198EC719E</key>
+        <key>${UUID}</key>
         <string>BlackHole_Create</string>
     </dict>
     <key>CFPlugInTypes</key>
     <dict>
         <key>443ABAB8-E7B3-491A-B985-BEB9187030DB</key>
         <array>
-            <string>717D21C9-0892-4A2A-AC0B-35A198EC719E</string>
+            <string>${UUID}</string>
         </array>
     </dict>
 </dict>
