OEM先名を設定できるようにする

--- a/BlackHole.xcodeproj/project.pbxproj.template
+++ b/BlackHole.xcodeproj/project.pbxproj.template
@@ -342,7 +342,7 @@
 				INSTALL_PATH = "$(LOCAL_LIBRARY_DIR)/Audio/Plug-Ins/HAL";
 				MACOSX_DEPLOYMENT_TARGET = 10.9;
 				MARKETING_VERSION = 0.3.0;
-				PRODUCT_BUNDLE_IDENTIFIER = com.ernie.${ASSEMBLY_NAME};
+				PRODUCT_BUNDLE_IDENTIFIER = com.Ernie.${ASSEMBLY_NAME};
 				PRODUCT_NAME = ${ASSEMBLY_NAME}_Loopback;
 				PROVISIONING_PROFILE_SPECIFIER = "";
 				WRAPPER_EXTENSION = driver;
@@ -365,7 +365,7 @@
 				INSTALL_PATH = "$(LOCAL_LIBRARY_DIR)/Audio/Plug-Ins/HAL";
 				MACOSX_DEPLOYMENT_TARGET = 10.9;
 				MARKETING_VERSION = 0.3.0;
-				PRODUCT_BUNDLE_IDENTIFIER = com.ernie.${ASSEMBLY_NAME};
+				PRODUCT_BUNDLE_IDENTIFIER = com.Ernie.${ASSEMBLY_NAME};
 				PRODUCT_NAME = ${ASSEMBLY_NAME}_Loopback;
 				PROVISIONING_PROFILE_SPECIFIER = "";
 				WRAPPER_EXTENSION = driver;
@@ -388,7 +388,7 @@
 				INSTALL_PATH = "$(LOCAL_LIBRARY_DIR)/Audio/Plug-Ins/HAL";
 				MACOSX_DEPLOYMENT_TARGET = 10.9;
 				MARKETING_VERSION = 0.3.0;
-				PRODUCT_BUNDLE_IDENTIFIER = com.ernie.${ASSEMBLY_NAME};
+				PRODUCT_BUNDLE_IDENTIFIER = com.Ernie.${ASSEMBLY_NAME};
 				PRODUCT_NAME = ${ASSEMBLY_NAME}_Loopback;
 				PROVISIONING_PROFILE_SPECIFIER = "";
 				WRAPPER_EXTENSION = driver;
