--- a/BlackHole/BlackHole-Info.plist.template
+++ b/BlackHole/BlackHole-Info.plist.template
@@ -17,11 +17,11 @@
     <key>CFBundlePackageType</key>
     <string>BNDL</string>
     <key>CFBundleShortVersionString</key>
-    <string>$(MARKETING_VERSION)</string>
+	<string>v0.5.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>1</string>
+	<string>596</string>
     <key>CFPlugInFactories</key>
     <dict>
         <key>${UUID}</key>
